--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="chat-header">
                 <div class="header-content">
                     <div class="bot-avatar">
-                        <span class="owl-icon">🦉</span>
+                        <span class="owl-icon">N</span>
                     </div>
                     <div class="bot-info">
                         <h3 class="bot-name">NoctuaBot</h3>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="header-actions">
-                    <button class="action-btn" id="themeToggle" title="Toggle theme">🌙</button>
+                    <button class="action-btn" id="themeToggle" title="Toggle theme">◐</button>
                     <button class="action-btn" id="minimizeBtn" title="Minimize">−</button>
                 </div>
             </div>
@@ -52,12 +52,12 @@
             <div class="chat-body" id="chatBody">
                 <!-- Welcome Message -->
                 <div class="message bot-message">
-                    <div class="message-avatar">🦉</div>
+                    <div class="message-avatar">N</div>
                     <div class="message-content">
                         <div class="message-bubble">
-                            <p>Hello! 👋 I'm <strong>NoctuaBot</strong>, Alana's portfolio assistant.</p>
+                            <p>Hello! I'm <strong>NoctuaBot</strong>, Alana's portfolio assistant.</p>
                             <p>I can help you explore her projects, skills, and experience!</p>
-                            <p>Try asking me something or use the quick actions below 👇</p>
+                            <p>Try asking me something or use the quick actions below</p>
                         </div>
                         <span class="message-time">Just now</span>
                     </div>
@@ -66,10 +66,10 @@
 
             <!-- Quick Actions -->
             <div class="quick-actions" id="quickActions">
-                <button class="quick-btn" data-action="projects">📊 Projects</button>
-                <button class="quick-btn" data-action="skills">💼 Skills</button>
-                <button class="quick-btn" data-action="contact">📧 Contact</button>
-                <button class="quick-btn" data-action="github">🐙 GitHub</button>
+                <button class="quick-btn" data-action="projects">Projects</button>
+                <button class="quick-btn" data-action="skills">Skills</button>
+                <button class="quick-btn" data-action="contact">Contact</button>
+                <button class="quick-btn" data-action="github">GitHub</button>
             </div>
 
             <!-- Chat Input -->
@@ -92,7 +92,7 @@
 
         <!-- Chat Toggle Button (when minimized) -->
         <button class="chat-toggle hidden" id="chatToggle">
-            <span class="toggle-icon">💬</span>
+            <span class="toggle-icon">◉</span>
             <span class="notification-badge">1</span>
         </button>
     </div>
