feat: upgrade NoctuaBot with day/night toggle, sounds, and easter eggs

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     </div>
                 </div>
                 <div class="header-actions">
+                    <button class="action-btn" id="soundToggle" title="Toggle sound">🔊</button>
                     <button class="action-btn" id="themeToggle" title="Toggle theme">◐</button>
                     <button class="action-btn" id="minimizeBtn" title="Minimize">−</button>
                 </div>
@@ -57,7 +58,9 @@
                         <div class="message-bubble">
                             <p>Hello! I'm <strong>NoctuaBot</strong>, Alana's portfolio assistant.</p>
                             <p>I can help you explore her projects, skills, and experience!</p>
-                            <p>Try asking me something or use the quick actions below</p>
+                            <p>Try asking me something or use the quick actions below 👇</p>
+                            <p style="font-size: 12px; margin-top: 8px; opacity: 0.8;">💡 Tip: Type 'help' to discover
+                                easter eggs!</p>
                         </div>
                         <span class="message-time">Just now</span>
                     </div>
@@ -99,6 +102,7 @@
 
     <!-- Scripts -->
     <script src="js/particles.js"></script>
+    <script src="js/sounds.js"></script>
     <script src="js/portfolio-data.js"></script>
     <script src="js/responses.js"></script>
     <script src="js/chatbot.js"></script>
