--- a/index.html
+++ b/index.html
@@ -59,8 +59,19 @@
                     </div>
                 </div>
                 <div class="header-actions">
-                    <button class="action-btn" id="soundToggle" title="Toggle sound">🔊</button>
-                    <button class="action-btn" id="minimizeBtn" title="Minimize">−</button>
+                    <button class="action-btn" id="soundToggle" title="Toggle sound">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="url(#icon-gradient)"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon>
+                            <path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path>
+                        </svg>
+                    </button>
+                    <button class="action-btn" id="minimizeBtn" title="Minimize">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="url(#icon-gradient)"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                        </svg>
+                    </button>
                 </div>
             </div>
 
@@ -135,8 +146,10 @@
                 <div class="input-container">
                     <input type="text" id="messageInput" placeholder="Ask me anything..." autocomplete="off">
                     <button class="send-btn" id="sendBtn">
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                            <path d="M2 10L18 2L10 18L8 11L2 10Z" />
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="22" y1="2" x2="11" y2="13"></line>
+                            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
                         </svg>
                     </button>
                 </div>
@@ -145,7 +158,12 @@
 
         <!-- Chat Toggle Button (when minimized) -->
         <button class="chat-toggle hidden" id="chatToggle">
-            <span class="toggle-icon">◉</span>
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path
+                    d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
+                </path>
+            </svg>
             <span class="notification-badge">1</span>
         </button>
     </div>
