--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
             <div class="chat-header">
                 <div class="header-content">
                     <div class="bot-avatar">
-                        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="url(#icon-gradient)"
-                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path
-                                d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-                            </path>
+                        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="url(#icon-gradient)"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <circle cx="8" cy="10" r="2"></circle>
+                            <circle cx="16" cy="10" r="2"></circle>
+                            <path d="M12 14l-2 2h4l-2-2z"></path>
+                            <path d="M7 4l2 3"></path>
+                            <path d="M17 4l-2 3"></path>
                         </svg>
                     </div>
                     <div class="bot-info">
@@ -80,11 +83,14 @@
                 <!-- Welcome Message -->
                 <div class="message bot-message">
                     <div class="message-avatar">
-                        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"
                             stroke-linecap="round" stroke-linejoin="round">
-                            <path
-                                d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-                            </path>
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <circle cx="8" cy="10" r="2"></circle>
+                            <circle cx="16" cy="10" r="2"></circle>
+                            <path d="M12 14l-2 2h4l-2-2z"></path>
+                            <path d="M7 4l2 3"></path>
+                            <path d="M17 4l-2 3"></path>
                         </svg>
                     </div>
                     <div class="message-content">
