--- a/index.html
+++ b/index.html
@@ -170,11 +170,13 @@
 
         <!-- Chat Toggle Button (when minimized) -->
         <button class="chat-toggle hidden" id="chatToggle">
-            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2"
+            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"
                 stroke-linecap="round" stroke-linejoin="round">
-                <path
-                    d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-                </path>
+                <path d="M12 4C10 4 8.5 5 8.5 7.5C8.5 10 12 13 12 13C12 13 15.5 10 15.5 7.5C15.5 5 14 4 12 4Z"></path>
+                <path d="M10.5 7.5L10.5 8"></path>
+                <path d="M13.5 7.5L13.5 8"></path>
+                <path d="M8.5 7.5C6 9 5 14 7 18C9 21 15 21 17 18C19 14 18 9 15.5 7.5"></path>
+                <path d="M15.5 7.5C15.5 7.5 16 12 14 16"></path>
             </svg>
             <span class="notification-badge">1</span>
         </button>
