fix: improve owl avatars and increase text contrast in quick actions

--- a/index.html
+++ b/index.html
@@ -118,20 +118,8 @@
             <div class="chat-body" id="chatBody">
                 <!-- Welcome Message -->
                 <div class="message bot-message">
-                    <div class="message-avatar">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"
-                            stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M2 8C5 8 7 11 7 14"></path>
-                            <path d="M22 8C19 8 17 11 17 14"></path>
-                            <path d="M2 8L7 4L9 7"></path>
-                            <path d="M22 8L17 4L15 7"></path>
-                            <path d="M12 18C14.5 18 16 15 16 11C16 7 14 5 12 5C10 5 8 7 8 11C8 15 9.5 18 12 18Z"></path>
-                            <path d="M10 10C10 10 10.5 11 11 11"></path>
-                            <path d="M14 10C14 10 13.5 11 13 11"></path>
-                            <path d="M9 7L8 4"></path>
-                            <path d="M15 7L16 4"></path>
-                            <path d="M10 18L9 22H15L14 18"></path>
-                        </svg>
+                    <div class="message-avatar bot-avatar-small">
+                        🦉
                     </div>
                     <div class="message-content">
                         <div class="message-bubble">
